update iac contract - enforce scope_id and terraform_provider
